# docker-python-scripts

./: .gitignore  _load_from_placeholder_to_csv.py  _send_report_extraction.py  _send_repport_extraction.py  command_pattern.md  docker-compose.yaml  pyproject.toml  readme.md
assets/: actions.py  config.py  mailSender.py  queries.py  submitForm.py  utilsfiles.py  zipfiles.py
classes/: WriteFiles.py
db/: dump-mydb-202601251136.sql
tmp/csv/: data.csv  readme.txt
tmp/extract/: report_2026_06_24.txt
