[project]
name = "my-scripts"
version = "0.1.0"
description = "command line scripts"
authors = [
    {name = "Edouard"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mysql-connector (>=2.2.9,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "mariadb (>=1.1.14,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.0,<10.0.0)"
]
